Fixed more scrolling issues, spacing

--- a/public/master.css
+++ b/public/master.css
@@ -158,7 +158,8 @@ div.chat-area {
 
 div#messages {
     min-height: 453px;
-    height: 70vh;
+    max-height: 500px;
+    /*height: 70vh;*/
     width: 100%;
     overflow-y: scroll;
     display: flex;
@@ -180,9 +181,12 @@ div#user-item{
   color: #baf2e9;
   font-family: 'Arvo', serif;
   margin: auto;
-  margin-left: 20px;
+  margin-left: 10px;
   padding: 0;
+}
 
+#user-item img{
+  -webkit-transform: scale(0.8);
 }
 
 div.nav-bar {
@@ -230,7 +234,7 @@ span#user-title{
   color: #1ebea5;
   position: relative;
   text-align: left;
-  padding: 30px 30px 30px 30px;
+  padding: 30px 30px 20px 30px;
   border-bottom: 1px solid lightgray;
 }
 
